Modifiquei os icon

--- a/index.html
+++ b/index.html
@@ -84,15 +84,15 @@
                 </div>
 
                 <div class="social-media-buttons">
-                    <a href="">
+                    <a class="whats" href="">
                         <i class="fa-brands fa-whatsapp"></i>
                     </a>
 
-                    <a href="">
+                    <a class="insta" href="">
                         <i class="fa-brands fa-instagram"></i>
                     </a>
 
-                    <a href="">
+                    <a class="face" href="">
                         <i class="fa-brands fa-facebook"></i>
                     </a>
                 </div>
@@ -309,15 +309,15 @@
             </span>
 
             <div class="social-media-buttons">
-                <a href="">
+                <a class="whats" href="">
                     <i class="fa-brands fa-whatsapp"></i>
                 </a>
 
-                <a href="">
+                <a class="insta" href="">
                     <i class="fa-brands fa-instagram"></i>
                 </a>
 
-                <a href="">
+                <a class="face" href="">
                     <i class="fa-brands fa-facebook"></i>
                 </a>
             </div>
